<resources>
    <string name="app_name">Login System</string>

    <!-- General Terms -->
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="register_long">Register an account</string>
    <string name="properties">Properties</string>
    <string name="forward">Continue</string>
    <string name="access">Access</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="reset">Reset</string>
    <string name="back">Return</string>
    <string name="enter">Enter</string>
    <string name="select_admin_code">Admin Code</string>
    <string name="all_users">All Users</string>
    <string name="author">Made by PC Chin</string>
    <string name="version">Version: </string>
    <string name="forget_password">Forgot your password?</string>
    <string name="creating_acc">Creating account…</string>
    <string name="saving_changes">Saving changes…</string>
    <string name="logging_in">Logging in…</string>
    <string name="delete_user">Delete user?</string>
    <string name="user_deleted">User deleted</string>
    <string name="edit_profile">Edit profile</string>
    <string name="access_admin">Access admin menu</string>
    <string name="password_reset">Reset password</string>
    <string name="access_admin_info">This code allows you to access the admin menu, \ncontaining the
    info of all users.</string>
    <string name="access_admin_change">It can be changed in the admin menu.</string>
    <string name="logout">Log out</string>
    <string name="password_updated">Your password has been updated</string>
    <string name="blank" />

    <!-- Input Terms -->
    <string name="username">Username</string>
    <string name="username_pls">Enter your username</string>
    <string name="password">Password</string>
    <string name="password_pls">Enter your password</string>
    <string name="password_again">Re-enter your password</string>
    <string name="password_old">Old Password</string>
    <string name="password_new">New Password</string>
    <string name="photo">Profile Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="birthday">Birthday</string>
    <string name="select_birthday">Select birthday</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="current_birthday">Birthday: </string>
    <string name="restore_code">Restore Code</string>
    <string name="select_restore_code">Enter a restore code</string>
    <string name="enter_restore_code">Enter your restore code</string>
    <string name="tnc">I agree to the terms and conditions of this app</string>
    <string name="select_first_name">Enter your first name</string>
    <string name="select_last_name">Enter your last name</string>

    <!-- Error Strings -->
    <string name="error_username_blank">Username cannot be blank.</string>
    <string name="error_password_blank">Password cannot be blank.</string>
    <string name="error_username_missing">Username is not found.</string>
    <string name="error_code_blank">Restore code cannot be blank.</string>
    <string name="error_incorrect">Username or password is incorrect.</string>
    <string name="error_password_incorrect">Password is incorrect.</string>
    <string name="error_code_incorrect">Restore code is incorrect.</string>
    <string name="error_username_taken">Username has been taken.</string>
    <string name="error_password_short">Password must be at least 8 characters long.</string>
    <string name="error_password_utf">Password can only contain alphanumeric characters and symbols.</string>
    <string name="error_password_new_blank">Leave blank for password to remain the same.</string>
    <string name="error_code_new_blank">Leave blank for restore code to remain the same.</string>
    <string name="error_password_differ">Both passwords don\'t match</string>
    <string name="error_checkbox_fail">You must agree to the terms and conditions to proceed.</string>
    <string name="error_admin_blank">Admin code cannot be blank</string>
    <string name="error_acc_in_use">Account is in use</string>
</resources>
